Fix typo in error.html, update live server port, and improve styling
- Fix a typo in the error.html file
- Update the live server port in the .vscode/settings.json file
- Improve the styling in various CSS files

--- a/css/config.css
+++ b/css/config.css
@@ -29,7 +29,7 @@
 }
 
 .sign svg path {
-  fill: rgb(67, 32, 224);
+  fill: black;
 }
 
 .text {
@@ -44,7 +44,7 @@
 }
 
 .Btn:hover {
-  background-color:  rgb(67, 32, 224);
+  background-color:  black;
   width: 125px; 
   border-radius: 40px; 
 }
@@ -83,6 +83,9 @@
     z-index: 1000; 
     display: none; 
 }
+.div-dni{
+color: black;
+}
 
 .information {
     padding: 20px; 
@@ -93,7 +96,9 @@
 }
 
 .div-log {
-    margin-top: 20%;
+  display: flex;
+  justify-content: flex-end;
+    margin-top: 50%;
 
 }
 
@@ -118,8 +123,8 @@
   justify-content: space-between;
 }
 .avatar {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;  
   border: var(--border);
   overflow: hidden;
