--- a/css/asist.css
+++ b/css/asist.css
@@ -9,7 +9,22 @@
     --box-shadow: rgba(0, 0, 0, 0.1);
     --box-shadow-focus: rgba(0, 0, 0, 0.15);
 }
-
+/* .div-titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+ .header-container{
+   margin-left: 5%;
+   margin-right: 10%;
+    display: flex;
+    justify-content: space-around;
+ }
+.titulo{
+    font-size: 90px;
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.8); 
+    -webkit-text-stroke: 2px black;
+}
 main{
     color: var(--main-color);
 }
@@ -53,13 +68,16 @@ justify-content: space-around;
     border-radius: 20px;
     border: none;
     outline: none;
-    padding: 5px;
+    padding: 10px 20px;
     font-size: 16px;
     width: 100%;
-
+font-size: 16px;
+font-family: var(--font-tittle);
+text-align: justify;
     background-color: var(--input-background);
     box-shadow: inset 2px 5px 10px var(--box-shadow);
     transition: all 300ms ease-in-out;
+    /* text-align: center; */
 }
 
 
@@ -85,6 +103,7 @@ justify-content: space-around;
     display: inline-block;
     text-decoration: none;
     box-shadow: var(---main-shadow);
+    margin-left: 1%;
 }
 
 
