--- a/css/login-registro.css
+++ b/css/login-registro.css
@@ -1,6 +1,6 @@
 :root {
 
-    --primary-color: rgba(7, 9, 168, 1);
+    --primary-color: rgb(5, 7, 131);
     --secondary-color: rgba(68, 114, 255, 1);
     --hover-color:rgba(0, 85, 192, 0.8);
     --background-color: #f0f4f7;
@@ -11,6 +11,8 @@
     --success-color: green;
     --error-color: red;
     --tran-hover:  scale(1.05);
+    --body-background: linear-gradient(rgba(7, 9, 168, 1),rgba(0, 85, 192, 0.8), rgba(68, 114, 255, 1));
+
     
 
    
@@ -70,7 +72,7 @@ main {
     flex: 1;
     border-radius: 20px;
     padding: 15px 25px;
-    background-color: #458797; 
+    background: var(--body-background); 
     border: none;
     outline: none;
     cursor: pointer;
