Refactor CSS to add background-size property and improve styling

--- a/css/config.css
+++ b/css/config.css
@@ -95,12 +95,11 @@ color: black;
     margin-bottom: 10px;
 }
 
-.div-log {
+/* .div-log {
   display: flex;
   justify-content: flex-end;
     margin-top: 50%;
-
-}
+} */
 
 .close-btn {
   position: absolute; 
@@ -133,10 +132,51 @@ color: black;
   display: block;
 }
 .user{
-  padding: 10px;
+  padding:  3px 10px;
   border: var(--border);
-  border-radius: 40px;
+  border-radius: 30px;
 }
+
+.user:hover, .avatar:hover{
+border-color: blue;
+}
+
+.ambos{
+  margin-top: 50%;
+  display: flex;
+  justify-content:space-between
+}
+/* .div-button{
+  display: flex;
+  justify-content: flex-start;
+    margin-top: 50%;
+} */
+.nfc{
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 15px;
+  /* font-weight: 500; */
+  color: #00000080;
+  text-shadow: none;
+  background: transparent;
+  cursor: pointer;
+  box-shadow: transparent;
+  border: 1px solid #ffffff80;
+  transition: 0.5s ease;
+  user-select: none;
+}
+:root{
+  --color-bg:rgba(68, 114, 255, 1)
+}
+.nfc:active, .nfc:hover{
+  color: #0c0000;
+  background: var(--color-bg);
+  border: 1px solid var(--color-bg);
+  text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff;
+  box-shadow: 0 0 5px var(--color-bg), 0 0 20px var(--color-bg), 0 0 50px var(--color-bg),
+    0 0 100px var(--color-bg);
+}
+
 
 @media (max-width: 768px) {
 
