--- a/css/login-registro.css
+++ b/css/login-registro.css
@@ -81,11 +81,13 @@ main {
 }
 
 .decision-button.active {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
+    background: linear-gradient(var(--primary-color), var(--primary-color));
 }
 
 .decision-button:hover {
-    background-color: var(--hover-color);
+background: linear-gradient(var(--hover-color), var(--hover-color));
+    /* background-color: var(--hover-color); */
 }
 .content {
     display: none;
