--- a/css/qr.css
+++ b/css/qr.css
@@ -1,6 +1,6 @@
 :root {
-    --tamaño-lineal: 190px;
-    --tamaño-white: 170px;
+    --tamaño-lineal: 290px;
+    --tamaño-white: 270px;
     --radious: 30px;
     --shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     --hover-shadow: 4px 4px 7px rgba(0, 0, 0, 0.3);
@@ -58,7 +58,8 @@ main {
     background-color: white;
     border-radius: var(--radious);
     height: 90%; 
-    width: 90%; 
+    width: 90%;
+    scale: 1; 
 }
 
 .text {
