--- a/css/asist.css
+++ b/css/asist.css
@@ -15,10 +15,30 @@
     align-items: center;
 } */
  .header-container{
-   margin-left: 5%;
+   /* margin-left: 5%; */
    margin-right: 10%;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    /* position: sticky;
+    top: 0px;
+
+    box-shadow: var(--box-shadow-hover); 
+    animation-name: animation;
+    animation-duration: 15s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;    
+    animation-play-state: running; */
+
+}
+
+@keyframes animation {
+0% {background-color: rgba(7, 9, 168, 1)}
+25%{
+background-color: rgba(0, 85, 192, 0.8) ;
+}
+75%{  background-color: rgba(68, 114, 255, 1)}
+100%{  background-color: rgb(114, 148, 252)}
+
  }
 .titulo{
     font-size: 70px;
@@ -113,3 +133,77 @@ text-align: justify;
     scale: 1.1;
     box-shadow: var(--hover-shadow);
 }
+
+
+
+@media (max-width: 768px) {
+    body{
+        overflow-x: scroll;
+        height: 1000vh;
+        width: 100vw;
+        background: linear-gradient(rgba(7, 9, 168, 1),rgba(0, 85, 192, 0.8), rgba(68, 114, 255, 1));;
+        background-size: cover;
+        margin: 0;
+    
+    }
+   
+    .titulo {
+        font-size: 40px;
+        text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+        -webkit-text-stroke: 1px black;
+        text-align: center;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .div-input {
+        flex-direction: column;
+        padding: 5px 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .input {
+        margin: 5px 0;
+        padding: 8px 12px;
+        font-size: 14px;
+        width: 70%;
+    }
+
+    .search-button {
+        width: 90%;
+        margin: 10px 0;
+        padding: 12px;
+        font-size: 14px;
+    }
+
+    .tabla {
+        margin: 1%;
+    }
+
+    table {
+        font-size: 14px;
+    }
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.pagination-button{
+    margin: 0 5px;
+    padding: 8px 16px;
+    cursor: pointer;
+    border-radius: 30px;
+    border: none;
+}
+.pagination-button:hover{
+    scale: 1.1;
+}
+
