Refactor CSS styles for improved layout, remove unused SVG, and update HTML structure for better readability

--- a/css/carrousel.css
+++ b/css/carrousel.css
@@ -1,7 +1,7 @@
 :root {
-    --carousel-width: 60%;
-    --carousel-height: 380px;
-    --carousel-margin-top: 4%;
+    --carousel-width: 75%;
+    --carousel-height: 350px;
+    --carousel-margin-top: 2%;
     --control-bg-color: transparent; 
     --control-border-color: black; 
     --carousel-border-color: linear-gradient(180deg,rgb(47, 76, 163),  rgba(4, 67, 143, 0.8), rgb(4, 5, 109), ); 
@@ -10,8 +10,8 @@
 }
 
 .container {
-    width: 60%;
-    height:380px;
+    width: var(--carousel-width);
+    height: var(--carousel-height);
     border-radius: var(--border-radius);
     background-color: var(--carousel-border-color);
     position: relative;
@@ -32,8 +32,8 @@
 }
 
 .carousel {
-    width: 60%;
-    height: 350px;
+    width: 95%;
+    height: 320px;
     overflow: hidden;
     border-radius: var(--border-radius);
 }
@@ -54,10 +54,6 @@
     font-size: 24px;
     color: black;
     border-radius: var(--border-radius); 
-}
-.img{
-    height: 100%;
-    width: 100%;
 }
 
 /* Colors for carousel items */
