--- a/css/qr.css
+++ b/css/qr.css
@@ -1,6 +1,6 @@
 :root {
-    --tamaño-lineal: 290px;
-    --tamaño-white: 270px;
+    --tamaño-lineal: 220px;
+    --tamaño-white: 200px;
     --radious: 30px;
     --shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     --hover-shadow: 4px 4px 7px rgba(0, 0, 0, 0.3);
@@ -29,6 +29,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .lineal-qr {
@@ -52,17 +53,18 @@ main {
 }
 
 .qr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: var(--radious);
-    height: 90%; 
-    width: 90%;
-    scale: 1; 
-}
 
-.text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        border-radius: var(--radious);
+        height: 90%; 
+        width: 90%;
+scale: 1.1;
+    }
+
+.textoQr {
     font-weight: bold;
     font-size: 20px; 
     color: white; 
@@ -105,7 +107,7 @@ main {
         --radious: 20px;
     }
 
-    .text {
+    .textoQr {
         font-size: 18px; 
     }
 
